<?xml version="1.0"?>
<package format="2">
  <name>sonar_vis</name>
  <version>0.0.0</version>
  <description>The sonar_vis package</description>

  <maintainer email="beimingl@seas.upenn.edu">Beiming Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <!-- <exec_depend>nav2d_navigator</exec_depend>
  <exec_depend>nav2d_operator</exec_depend> -->

<export>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
    <!-- <gazebo_ros gazebo_media_path="${prefix}/models"/> -->
</export>

</package>
